2020-XX-XX: 4.1.1

	Bugfixes:

	js : fixed catch var naming collision in ES6 mode (#9413)

2020-05-13: 4.1.0

	New features:

	all : added tail recursion elimination (#8908)
	all : added unified exception handling (#9124)
	all : allow `try {} catch(e) {}` as a shortcut for `try {} catch(e:haxe.Exception) {}` (#9269)
	eval : added SSL support (#9009)
	jvm : the JVM target is no longer considered experimental

	General improvements:

	all : implemented different display support approach (#8962)
	all : improved display services related to reference finding
	all : added go-to-implementation support (#9043)
	all : made various improvements to diagnostics
	all : support completion for map keys (#9133)
	all : improved parser robustness for incomplete syntax (#9148)
	all : disallowed the combination of `@:overload` and inline (#3846)
	all : improved renaming of local variables (#9304)
	all : better inlining of for-loops with anonymous iterators (#8848)
	all : remove redundant final `return` in `Void` functions (#6420)
	all : remove redundant `continue` in loops (#8952)
	all : improved various compilation errors reporting
	all : allowed `(get,default)` property access combination (#6195, #8825)
	all : allowed ++ and -- on member properties of abstracts (#8930)
	js : use abstract type name for generating its implementation class (#9006)
	js : improve haxe.ds.StringMap implementation (#8909)
	js : improve interface checking and make it more minifier-friendly (#9178)
	js : generate `let` instead of `var` when compiler with `-D js-es=6` (#9280)
	js : optimize `.bind` on constructors (#9227)
	jvm : rewrote function handling to me much faster and more portable (#9208)
	jvm : generate interfaces for typedefs for improved performance (#9195)
	jvm : added support for haxe.MainLoop
	jvm : support `@:jvm.synthetic` and use it to hide some generated fields (#9213)
	jvm : respect `@:private` and `@:protected`
	lua : improve error handling behavior when throwing objects/instances