@@ -38,6 +38,9 @@ let key_hasNext = hash "hasNext"
 let key___meta__ = hash "__meta__"
 let key_get = hash "get"
 let key_pos = hash "pos"
+let key_min = hash "min"
+let key_max = hash "max"
+let key_file = hash "file"
 let key_len = hash "len"
 let key_message = hash "message"
 let key_exception_message = hash "__exceptionMessage"
