@@ -1,0 +1,5 @@
+class Main {
+	static function main() {
+		throw new haxe.macro.Expr.Error("hi", (macro _).pos);
+	}
+}
